--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <!--slick slide -->
     <link rel="stylesheet" type="text/css" href="./js/slick.css">
     <link rel="stylesheet" type="text/css" href="./js/slick/slick-theme.css">
+
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Poor+Story&display=swap');
+    </style>
   
     
     
