--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         <p> <span class="orange">< 1 부 ></span> <br>
             Recover - 김트와 친구들 <br>
             입춘 - 한로로 <br>
-            마음으로 - 유다빈밴드 <br>
-            사람 - SURL <br>
+            마음으로 - 유다빈밴드 <br></p>
+        <p> 사람 - SURL <br>
             9지하철 - SURL <br>
             Far Away - Lacuna <br>
-            은하 - 쏜애플  <br>
-            I am not your ocean anymore - 백예린  <br>
+            은하 - 쏜애플  <br></p>
+        <p> I am not your ocean anymore - 백예린  <br>
             삐뽀삐뽀 - 김뜻돌  <br>
-            파도 - 새소년  <br>
+            파도 - 새소년  <br><br></p>
         </p>
 
         <p> <span class="orange">47th</span> <br>
@@ -71,13 +71,13 @@
             <span class="orange">< 2 부 ></span> <br>
             범람 - Lacuna <br>
             Oddities - The Poles <br>
-            Find Me! - The Poles <br>
-            해초 - 한로로 <br>
-            Stand Up! - 터치드 <br>
-            호랑이 - 라이프 앤 타임 <br>
+            Find Me! - The Poles <br></p>
+        <p> 해초 - 한로로 <br>
+            Stand Up! - 터치드 <br></p>
+        <p> 호랑이 - 라이프 앤 타임 <br>
             대양 - 라이프 앤 타임 <br>
-            exiv98 - 라이프 앤 타임 <br>
-            여정 - 터치드 <br>
+            exiv98 - 라이프 앤 타임 <br></p>
+        <p> 여정 - 터치드 <br>
             얼음요새 - 터치드 <br>
             재 - 한로로 <br>
         </p>
