--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         <p> <span class="orange">< 1 부 ></span> <br>
             Recover - 김트와 친구들 <br>
             입춘 - 한로로 <br>
-            마음으로 - 유다빈밴드 <br></p>
+            마음으로 - 유다빈밴드 </p>
         <p> 사람 - SURL <br>
             9지하철 - SURL <br>
             Far Away - Lacuna <br>
-            은하 - 쏜애플  <br></p>
+            은하 - 쏜애플  </p>
         <p> I am not your ocean anymore - 백예린  <br>
             삐뽀삐뽀 - 김뜻돌  <br>
             파도 - 새소년  <br><br></p>
