--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
             <span class="orange">< 2 부 ></span> <br>
             범람 - Lacuna <br>
             Oddities - The Poles <br>
-            Find Me! - The Poles <br></p>
+            Find Me! - The Poles </p>
         <p> 해초 - 한로로 <br>
-            Stand Up! - 터치드 <br></p>
+            Stand Up! - 터치드 </p>
         <p> 호랑이 - 라이프 앤 타임 <br>
             대양 - 라이프 앤 타임 <br>
-            exiv98 - 라이프 앤 타임 <br></p>
+            exiv98 - 라이프 앤 타임 </p>
         <p> 여정 - 터치드 <br>
             얼음요새 - 터치드 <br>
             재 - 한로로 <br>
