--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 <body>
   
   <section id="title">
-    <!-- <h1 class="title">플레임즈 46기 정기공연 <br>
-        ; 잔상</h1> -->
+    <h1 class="title"><br><br><br></h1>
    
     <h1 class="logo">
     <img src="./images/poster.png" alt="logo" >
