--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <h3 class="line1">-</h3>
         </div>
         <div class="intro">
-            <p class="name">46th<br>이채현 | 김희찬 | 김민혁 | 김채원 | 김태영 | 조민규<br>
+            <p class="name">46th<br>이채현 | 김민혁 | 조민규 | 김희찬 | 김태영 | 김채원<br>
                 </p>
         </div>
     </section>
@@ -139,7 +139,7 @@
         <div class="video">
             <iframe width="560" height="315" src="https://www.youtube.com/live/dOqEEiJCqkQ?si=NBCw5I9joQDHKxDo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <p>뭐 쓸거있나요</p>
+        <p>뭐 쓸거있나</p>
     </section>video -->
     
     
